# labrna

./: README.md  pyproject.toml
exercicios/: torch1-5.py
labs/: funcoes-de-ativacao.py  gradiente.py  plot.py  swissroll.py  treinamento-perceptron.py
src/labrna/: perceptron.py
